DTSRD-88
- Removing raw type usage.